Fix for some layout issues in bootstrap_package 12.0.3
Should also works with bootstrap_package 11.0.2 and higher,
tested on 11.0.3 and 12.0.3

--- a/Resources/Public/Scss/Theme/theme.scss
+++ b/Resources/Public/Scss/Theme/theme.scss
@@ -22,6 +22,10 @@
 	width: $gpxviewer-width;
 	margin-left: 0px;
 	margin-bottom: 0px;
+	gap: 0px; // Change for BP_12-0 + bootstrap4/bootstrap5: not working for columns side by side (width isn't 100% anymore)
+}
+.tx-wok-gpxviewer .textpic-left .textpic-item, .tx-wok-gpxviewer .textpic-right .textpic-item {
+	width: calc(50%);
 }
 .tx-wok-gpxviewer .textpic-gallery {
 	padding-left: 0px;
@@ -87,6 +91,9 @@
 .gpx-viewer-images-border button.next { 
 	border-left-style: solid;
 	border-right-style: none;
+}
+.gpx-viewer-images-border .btn-group { 
+	width: 100%; // Change for BP_12-0 + bootstrap5
 }
 .gpx-viewer-figure {
 	margin-bottom: 0px; 
